# FundFlow

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  FundFlow TDD v1.1 (개정판).md  FundFlow TDD v1.2.md (simplified)  Makefile  README.md  claude.md  codex-mcp.json  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  playwrite-mcp.json  shadcn-mcp.json  todo.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20250110_01_add_fund_models.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: calculation_service.py  file_service.py
backend/data/uploads/: 1_[Input Data] Fund A_Q1 2025 distribution data_v1.2.xlsx
backend/src/api/: __init__.py  download.py  health.py  results.py  salt_rules.py  sessions.py  template.py  upload.py
backend/src/database/: connection.py
backend/src/exceptions/: __init__.py  upload_exceptions.py
backend/src/models/: __init__.py  composite_rule.py  distribution.py  enums.py  fund.py  fund_source_data.py  investor.py  investor_fund_commitment.py  resolved_rule.py  salt_rule_set.py  source_file.py  upload_context.py  user.py  user_session.py  validation_error.py  validation_issue.py  withholding_rule.py
backend/src/services/: __init__.py  comparison_service.py  distribution_service.py  excel_processor.py  (+14 more)
backend/tests/: conftest.py  test_api_smoke.py  test_enums.py  test_excel_commitment_integration.py  test_file_service.py  test_fund_models.py  test_migration_fund_models.py  test_tax_calculation_service.py
(+191 files in other folders)
